--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+    <!--<script-->
+	    <!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDCApeoMpSTQxvz14Yhh09zlsw8FhB2ck&libraries">-->
+    <!--</script>-->
   </body>
 </html>
